ai-eduactor/k8s/postgres-service.yml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: aieducator
spec:
  ports:
    - port: 5432
  clusterIP: None
  selector:
    app: postgres
